minor UI changes

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,12 +6,30 @@
         android:layout_height="wrap_content"
         android:padding="6dp"
         android:id="@+id/TotalBalanceBox">
+        <ImageView
+            android:id="@+id/imWallet"
+            android:layout_toLeftOf="@+id/walletNameInHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/wallet"
+            android:tint="#fff"/>
         <TextView
+            android:layout_marginLeft="@dimen/list_margin"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/walletNameInHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="16dp"/>
+        <TextView
+            android:layout_marginTop="@dimen/list_margin"
+            android:layout_below="@+id/walletNameInHome"
             android:text="@string/stan_konta_string"
             android:id="@+id/textViewStan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white"
             android:textStyle="bold"
