--- a/app/src/main/res/layout/new_operation.xml
+++ b/app/src/main/res/layout/new_operation.xml
@@ -48,20 +48,48 @@
             android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal" />
 
-        <Spinner
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:id="@+id/categoriesSpinner"
-            android:layout_below="@+id/editText2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin">
+            <ImageView
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_category_choose"
+                android:tint="#fff"
+                android:id="@+id/imageView3" />
+            <Spinner
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:id="@+id/categoriesSpinner"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/imageView3"
+                android:layout_toEndOf="@+id/imageView3" />
+
+        </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin">
+        <ImageView
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/wallet"
+            android:tint="#fff"
+            android:id="@+id/imageView4" />
         <Spinner
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:id="@+id/walletsSpinner"
-            android:layout_below="@+id/editText2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageView4"
+            android:layout_toEndOf="@+id/imageView4"/>
+    </RelativeLayout>
+
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
