--- a/app/src/main/res/layout/new_standing_operation.xml
+++ b/app/src/main/res/layout/new_standing_operation.xml
@@ -44,7 +44,7 @@
         android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tytulNowejOperacji"
+        android:id="@+id/standingOperationTitle"
         android:hint="Tytuł(opcjonalnie)"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
