--- a/app/src/main/res/layout/new_operation.xml
+++ b/app/src/main/res/layout/new_operation.xml
@@ -92,6 +92,7 @@
 
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_marginTop="@dimen/list_margin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -122,6 +123,7 @@
         </RadioGroup>
 
     <LinearLayout
+        android:layout_marginTop="@dimen/list_margin"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
