--- a/app/src/main/res/layout/edit_operation.xml
+++ b/app/src/main/res/layout/edit_operation.xml
@@ -49,30 +49,63 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal" />
 
-    <Spinner
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/categoriesSpinner"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <Spinner
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin">
+    <ImageView
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_category_choose"
+        android:tint="#fff"
+        android:id="@+id/imageView3" />
+        <Spinner
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/categoriesSpinner"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageView3"
+            android:layout_toEndOf="@+id/imageView3" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/walletsSpinner"
-        android:layout_below="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin">
+    <ImageView
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/wallet"
+        android:tint="#fff"
+        android:id="@+id/imageView4" />
+        <Spinner
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/walletsSpinner"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageView4" />
+    </RelativeLayout>
+
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_marginTop="@dimen/list_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_width="fill_parent"
-        android:gravity="center"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/wplywLubWydatekEdytowanejOperacji"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/datePicker"
-        android:layout_alignStart="@+id/datePicker">
+        android:id="@+id/wplywLubWydatekEdytowanejOperacji">
+        <ImageView
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_is_income"
+            android:tint="#fff"/>
         <RadioButton
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Wpływ"
@@ -89,18 +122,20 @@
     </RadioGroup>
 
     <LinearLayout
+        android:layout_marginTop="@dimen/list_margin"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <TextView
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Wybierz datę:"
-            android:id="@+id/textView7" />
+            android:src="@drawable/ic_calendar"
+            android:tint="#fff"/>
 
         <Button
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="data"
