--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -2,18 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingTop="@dimen/ten_dp"
+    android:paddingBottom="@dimen/ten_dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:contentDescription="@string/desc_user_icon"
+        android:layout_width="@dimen/forty_dim"
+        android:layout_height="@dimen/forty_dim"
         android:src="@drawable/h1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         />
 
@@ -24,7 +25,6 @@
         android:textSize="18sp"
         android:gravity="center_vertical"
         android:textColor="#000"
-        android:text="Line 1"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/icon"
@@ -33,8 +33,7 @@
     <TextView android:id="@+id/subTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Line 2"
-        android:layout_toRightOf="@+id/icon"
+        android:layout_toEndOf="@+id/icon"
         android:layout_below="@+id/title"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
