--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,65 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="0dp"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/walletNameLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
-
-        <TextView
+        android:gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/imWallet"
+            android:layout_toLeftOf="@+id/walletName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Od:"
-            android:id="@+id/textView12"
-            android:gravity="center"
+            android:src="@drawable/wallet"
+            android:tint="#fff"/>
+        <TextView
+            android:layout_marginLeft="@dimen/list_margin"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:paddingLeft="10dp" />
+            android:layout_centerHorizontal="true"
+            android:id="@+id/walletName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="16dp"/>
+    </RelativeLayout>
+
+
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:text="@string/from_txt"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Button
+            android:id="@+id/dateFromButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="data"
-            android:id="@+id/dateFromButton"
             android:gravity="center"
-            android:layout_alignParentTop="true" />
+            android:text="@string/date_txt" />
 
         <TextView
+            android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Do:"
-            android:id="@+id/textView13"
+            android:layout_marginStart="50dp"
             android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="50dp"/>
+            android:text="@string/to_txt"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Button
+            android:id="@+id/dateToButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="data"
-            android:id="@+id/dateToButton"
+            android:layout_marginStart="10dp"
             android:gravity="center"
-
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp" />
+            android:text="@string/date_txt" />
 
     </LinearLayout>
-    </RelativeLayout>
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="530dp"
-        android:id="@+id/history_operations"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/balance_txt"
+        android:layout_gravity="center"
+        android:textSize="18dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/balance"
+        android:layout_gravity="center"
+        android:textSize="18dp" />
+    <TextView
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/timeRange"
+        android:layout_gravity="center"
+        android:textSize="18dp" />
+    <View
 
+        android:layout_height="1px"
+        android:layout_width="fill_parent"
+        android:background="#ffffff"
+        android:layout_below="@+id/textView9"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/view" />
+    <ListView
+
+        android:id="@+id/history_operations"
+        android:layout_width="match_parent"
+        android:layout_height="530dp" />
 </LinearLayout>
