--- a/app/src/main/res/layout/new_standing_operation.xml
+++ b/app/src/main/res/layout/new_standing_operation.xml
@@ -54,14 +54,14 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerCategoryNewStandingOperation"
         android:layout_below="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:id="@+id/walletsSpinner"
+        android:id="@+id/spinnerWalletNewStandingOperation"
         android:layout_below="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
