--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -1,65 +1,49 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.robert.menuproject.Reports">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="1">
-
-        <TextView
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Wybierz datę"
-            android:id="@+id/textView2" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Marzec 2016"
-            android:id="@+id/textView"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:layout_weight="0.13" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/leftArrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/left_arrow"
+                    android:tint="#fff"
+                    android:layout_centerVertical="true"/>
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/timeRange"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="18dp" />
+                <ImageView
+                    android:id="@+id/rightArrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/right_arrow"
+                    android:tint="#fff"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/wykresKolowy"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/wykresKolowy"
+                android:layout_width="match_parent"
+                android:layout_height="500dp" />
 
-        <ImageView
-            android:layout_width="481dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/pie_chart"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/button"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.13" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Suma przychodów: 20 000,00 zł"
-            android:id="@+id/textView5"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#407e2a" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Suma obciążeń: 20 000,00 zł"
-            android:id="@+id/textView6"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#f70e02" />
-    </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
