--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -39,6 +39,11 @@
                     android:layout_centerVertical="true"/>
             </RelativeLayout>
 
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/wykresLiniowy"
+                android:layout_width="match_parent"
+                android:layout_height="500dp" />
+
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/wykresKolowy"
                 android:layout_width="match_parent"
